# practice-rendering-wgpu-rust

./: Cargo.toml  README.md
src/: main.rs  pipeline_builder.rs
src/controls/: camera_controller.rs
src/etc/: hello_cube_cpu.rs
src/renderer_backend/: bind_group.rs  bind_group_layout.rs  camera.rs  instance.rs  material.rs  mesh_builder.rs  mod.rs  pipeline_builder.rs  state.rs
src/shaders/: shader.wgsl
