[package]
name = "voxel-engine-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
pollster = "0.3"
cgmath = "0.18"
image = "0.25.6"
glam = "0.27"
#pixels = "0.15"
anyhow = "1.0"
#winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "26.0.1"
glfw = "*"
glm = "*"
bytemuck = "1.23.2"